# eventum

./: .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  compare-targets-bench.js  index.cjs  index.d.ts  index.js  package-lock.json  package.json  test.js  vitest.config.js
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: compare-targets-bench.js
js/: compare-targets-bench.js  flush.js  masking.js  test.js
js/benchmark/: compare-targets-bench.js
scripts/: postinstall.cjs
src/: config.rs  format.rs  lib.rs  logger.rs  masking.rs  types.rs  utils.rs
test/: batching-lifecycle.test.js  batching.test.js  define-system.test.js  fields-config.test.js  flush.js  flush.test.js  log-levels.test.js  masking.js  masking.test.js  object-logging.test.js  output-formats.test.js  output-targets.test.js  sanitization.test.js
