[package]
name = "eventum"
version = "0.1.0-alpha.0"
edition = "2021"

build = "build.rs"

[build-dependencies]
napi-build = "2"

[dependencies]
napi = { version = "2", features = ["napi6", "serde-json"] }
napi-derive = "2"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11.1"

[lib]
name = "eventum"
crate-type = ["cdylib"]
